--- a/single.html
+++ b/single.html
@@ -45,19 +45,19 @@
 			<center><article>
 				<a class="example-image-link" href="images/01.jpg" data-lightbox="example-set" data-title="Click the right half of the image to move forward."><img class="example-image" src="images/01.jpg" alt=""/></a>
 				<div class="content-item">
-					<h3 class="title-item"><a href="#">Vestibulum posuere molestie risus</a></h3>
-					<div class="time"> SEPTEMBER 30TH</div>
+					<h3 id="detail_title" class="title-item"><a href="#">Vestibulum posuere molestie risus</a></h3>
+					<div id="detail_date" class="time"> SEPTEMBER 30TH</div>
 					<ul class="list-inline">
 						<li><a href="#"><i class="fa fa-eye"></i> 260</a></li>
 						<li><a href="#"><i class="fa fa-comment"></i> 260</a></li>
 						<li><a href="#"><i class="fa fa-heart"></i> 260</a></li>
 						<li><a href="#"><i class="fa fa-share"></i> 260</a></li>
 					</ul>
-					<p class="info">Aenean feugiat in ante et blandit. Vestibulum posuere molestie risus, ac interdum magna porta non. Pellentesque rutrum fringilla elementum. Curabitur tincidunt porta lorem vitae accumsan.Aenean feugiat in ante et blandit. Vestibulum posuere molestie risus, ac interdum magna porta non. Pellentesque rutrum fringilla elementum. Curabitur tincidunt porta lorem vitae accumsan.Aenean feugiat in ante et blandit. Vestibulum posuere molestie risus, ac interdum magna porta non. Pellentesque rutrum fringilla elementum. Curabitur tincidunt porta lorem vitae accumsan.</p>
+					<p id="detail_text" class="info">Aenean feugiat in ante et blandit. Vestibulum posuere molestie risus, ac interdum magna porta non. Pellentesque rutrum fringilla elementum. Curabitur tincidunt porta lorem vitae accumsan.Aenean feugiat in ante et blandit. Vestibulum posuere molestie risus, ac interdum magna porta non. Pellentesque rutrum fringilla elementum. Curabitur tincidunt porta lorem vitae accumsan.Aenean feugiat in ante et blandit. Vestibulum posuere molestie risus, ac interdum magna porta non. Pellentesque rutrum fringilla elementum. Curabitur tincidunt porta lorem vitae accumsan.</p>
 				</div>
 				<div class="bottom-item">
-					<a href="#" class="btn btn-share share"><i class="fa fa-share-alt"></i> Share</a>
-					<span class="user f-right">Posted by <a href="#">Jason Lemon</a><img src="images/ava-1.jpg"></span>
+					<a href="#" class="btn btn-share share"><i class="fa fa-share-alt"></i> 分享</a>
+					<span class="user f-right">Posted by <a href="#">孙辞海</a><img src="images/ava-1.jpg"></span>
 				</div>
 			</article></center>
 		</div>
