add foggy effect

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		</div>
 	</div>
 	<div id="page-content" class="index-page">
-		<div id="container">
+		<div id="container" class="blurpage">
 			<!-- These are our grid blocks -->
 		</div>
 	</div>
