--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
 </head>
 <body>
     <div id="bubble_dummylayer"><div id="bubble_layer"></div></div>
+    <div id="password_layer" class="password" style="position:fixed;background:black;opacity:0.8;left:0;top:0;width:100%;height:100vh;z-index:9999;"></div>
+    <div id="password_panel" class="password" style="position:fixed;z-index:9999;top:40%;padding:30px;background:#C83935;border-radius:5px;left:50%;transform:translateX(-50%);">
+        <p style="margin-bottom:10px;color:white;">宝宝输入密码：</p>
+    	<input id="password" type="password" style="padding:10px;width:200px;"/>
+    </div>
 	<div class="header">
 		<div id='cssmenu' >
 			<ul>
