--- a/single.html
+++ b/single.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Free Bootstrap Themes by Html5xCss3 dot com - Free Responsive Html5 Templates">
     <meta name="author" content="#">
 	
-    <title>SimplePix | Free Html5 Themes by </title>
+    <title>日常的一天</title>
 	
 	<!-- SmartMenus jQuery Bootstrap Addon CSS -->
     <link href="css/menu.css" rel="stylesheet">
@@ -34,8 +34,6 @@
 		<div id='cssmenu' >
 			<ul>
 			   <li><a href='index.html'><span>日记</span></a></li>
-			   <li class="active"><a href='single.html'><span>建设中</span></a></li>
-			   <li class='last'><a href='contact.html'><span>建设中</span></a></li>
 			</ul>
 		</div>
 	</div>
@@ -43,21 +41,24 @@
     <div id="page-content" class="sub-page">
 		<div class="container">
 			<center><article>
-				<a class="example-image-link" href="images/01.jpg" data-lightbox="example-set" data-title="Click the right half of the image to move forward."><img class="example-image" src="images/01.jpg" alt=""/></a>
-				<div class="content-item">
-					<h3 id="detail_title" class="title-item"><a href="#">Vestibulum posuere molestie risus</a></h3>
-					<div id="detail_date" class="time"> SEPTEMBER 30TH</div>
-					<ul class="list-inline">
-						<li><a href="#"><i class="fa fa-eye"></i> 260</a></li>
-						<li><a href="#"><i class="fa fa-comment"></i> 260</a></li>
-						<li><a href="#"><i class="fa fa-heart"></i> 260</a></li>
-						<li><a href="#"><i class="fa fa-share"></i> 260</a></li>
-					</ul>
-					<p id="detail_text" class="info">Aenean feugiat in ante et blandit. Vestibulum posuere molestie risus, ac interdum magna porta non. Pellentesque rutrum fringilla elementum. Curabitur tincidunt porta lorem vitae accumsan.Aenean feugiat in ante et blandit. Vestibulum posuere molestie risus, ac interdum magna porta non. Pellentesque rutrum fringilla elementum. Curabitur tincidunt porta lorem vitae accumsan.Aenean feugiat in ante et blandit. Vestibulum posuere molestie risus, ac interdum magna porta non. Pellentesque rutrum fringilla elementum. Curabitur tincidunt porta lorem vitae accumsan.</p>
-				</div>
-				<div class="bottom-item">
-					<a href="#" class="btn btn-share share"><i class="fa fa-share-alt"></i> 分享</a>
-					<span class="user f-right">Posted by <a href="#">孙辞海</a><img src="images/ava-1.jpg"></span>
+			    <div id="board" style="position:relative;">
+			        <div id="board_inner" style="transition:ease-out 10s;">
+					    <div id="panel" style="position:relative;"><img src="" id="person_image" style="position:absolute;bottom:9px;left:50%;transform:translateX(-50%);transition:ease 0.3s;"/>
+						<a class="example-image-link" href="images/diary/pic1.jpg" data-lightbox="example-set" data-title="Click the right half of the image to move forward."><img class="example-image" src="images/diary/pic1.jpg" alt=""/></a>
+						</div>
+						<div class="content-item">
+						    <div style="display:flex;justify-content:space-between;"><a id="previous-step" href="javascript:;" class="btn btn-more"><i class="fa fa-long-arrow-left"></i></a><a id="next-step" href="javascript:;" class="btn btn-more"><i class="fa fa-long-arrow-right"></i></a></div>
+							<h5 id="detail_title" class="title-item" style="margin-top:0;"><a href="#">在纽约日常的一天</a></h5>
+							<div id="detail_date" class="time">2017年10月2日</div>
+							<div style="height:80px;">
+							   <p id="detail_text" class="info">又是新的一天，吃完了早饭，走出大楼的大门，一股清新的空气迎面而来。宝宝应该已经吃完晚饭了吧~~于是我掏出了手机，拨通了宝宝的手机。</p>
+							</div>
+						</div>
+						<div class="bottom-item">
+							<a href="javascript:;" class="btn btn-share share"><i class="fa fa-share-alt"></i> 分享</a>
+							<span class="user f-right">Posted by <a href="#">孙辞海</a><img src="images/avatar.jpg"></span>
+						</div>
+					</div>
 				</div>
 			</article></center>
 		</div>
@@ -73,6 +74,8 @@
 	<script src="js/lightbox-plus-jquery.min.js"></script>
 	
 	<!-- Menu -->
+	<script src="js/theater.js"></script>
+	<script src="js/diary.js"></script>
 	<script src="js/script.js"></script>
 </body>
 </html>
