--- a/single.html
+++ b/single.html
@@ -44,7 +44,7 @@
 			    <div id="board" style="position:relative;">
 			        <div id="board_inner" style="transition:ease-out 10s;">
 					    <div id="panel" style="position:relative;"><img src="" id="person_image" style="position:absolute;bottom:9px;left:50%;transform:translateX(-50%);transition:ease 0.3s;"/>
-						<a class="example-image-link" href="images/diary/pic1.jpg" data-lightbox="example-set" data-title="Click the right half of the image to move forward."><img class="example-image" src="images/diary/pic1.jpg" alt=""/></a>
+						<a class="example-image-link" href="images/diary/pic1.jpg" data-lightbox="example-set" data-title="Click the right half of the image to move forward."><img class="example-image" src="images/diary/pic1.JPG" alt=""/></a>
 						</div>
 						<div class="content-item">
 						    <div style="display:flex;justify-content:space-between;"><a id="previous-step" href="javascript:;" class="btn btn-more"><i class="fa fa-long-arrow-left"></i></a><a id="next-step" href="javascript:;" class="btn btn-more"><i class="fa fa-long-arrow-right"></i></a></div>
